examples/errors/extends_missing.ik
type Sized class extends NotADefinedClass:
    fn size(Self) Int

fn main():
    print("\n")
